// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Accordion Default 1`] = `
Array [
  .c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  color: #336BFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  outline: 1px none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c0.c0 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c2 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c7 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

.c7 svg {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c3 {
  -webkit-tap-highlight-color: transparent;
}

<div
    aria-expanded={false}
    className="c0"
  >
    <h3
      className="Typography__Span-sc-10mju41-0 c1"
    >
      <button
        className="c2 c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <span
              className="Typography__Span-sc-10mju41-0 c1"
            >
              Låg CO₂ risk
            </span>
            <span
              className="Typography__Span-sc-10mju41-0 c6"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <svg
            aria-hidden="true"
            className="c8"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M7 9v7h2V9h7V7H9V0H7v7H0v2h7z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  color: #336BFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  outline: 1px none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c0.c0 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c2 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c7 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

.c7 svg {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c3 {
  -webkit-tap-highlight-color: transparent;
}

<div
    aria-expanded={false}
    className="c0"
  >
    <h3
      className="Typography__Span-sc-10mju41-0 c1"
    >
      <button
        className="c2 c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <span
              className="Typography__Span-sc-10mju41-0 c1"
            >
              Sustainability score
            </span>
            <span
              className="Typography__Span-sc-10mju41-0 c6"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <svg
            aria-hidden="true"
            className="c8"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M7 9v7h2V9h7V7H9V0H7v7H0v2h7z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
]
`;

exports[`Storyshots Molecules / Accordion With Badges 1`] = `
.c0 {
  padding: 40px;
  background-color: #FFFFFF;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c12 {
  color: #282823;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

.c1 {
  outline: 1px none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c1.c1 + .c1 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 {
  margin-top: 0;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding-right: 0px;
}

.c11 svg {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c6 {
  padding-right: 8px;
}

.c4 {
  -webkit-tap-highlight-color: transparent;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    className="c1"
  >
    <h3
      className="Typography__Span-sc-10mju41-0 c2"
    >
      <button
        className="c3 c4"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <span
              className="c7"
            >
              <svg
                aria-hidden="true"
                className="c8"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                width={16}
              >
                <path
                  d="M9 9.75H7V6h2v3.75ZM9 10.5v1.75H7V10.5h2Z"
                  fill="currentColor"
                />
                <path
                  clipRule="evenodd"
                  d="M10 2.12a2.34 2.34 0 0 0-4 0L.34 11.59C-.61 13.16.6 15 2.32 15h11.36c1.72 0 2.93-1.84 2-3.4L9.98 2.11ZM7.71 3.15A.31.31 0 0 1 8 3c.13 0 .23.06.28.15l5.68 9.47c.05.08.05.16 0 .23a.31.31 0 0 1-.28.15H2.32a.31.31 0 0 1-.28-.15.21.21 0 0 1 0-.23l5.68-9.47Z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
               
            </span>
          </div>
          <div
            className="c9"
          >
            <span
              className="Typography__Span-sc-10mju41-0 c2"
            >
              Leverage products without stop loss
            </span>
            <span
              className="Typography__Span-sc-10mju41-0 c10"
            >
              Valid until 2023-12-31
            </span>
          </div>
        </div>
        <div
          className="c11"
        >
          <svg
            aria-hidden="true"
            className="c12"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M16 13.42l-8-8-8 8v-2.828l8-8 8 8v2.828z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>
  <div
    aria-expanded={false}
    className="c1"
  >
    <h3
      className="Typography__Span-sc-10mju41-0 c2"
    >
      <button
        className="c3 c4"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <span
              className="c7"
            >
              <svg
                aria-hidden="true"
                className="c8"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                width={16}
              >
                <path
                  d="M9 9.75H7V6h2v3.75ZM9 10.5v1.75H7V10.5h2Z"
                  fill="currentColor"
                />
                <path
                  clipRule="evenodd"
                  d="M10 2.12a2.34 2.34 0 0 0-4 0L.34 11.59C-.61 13.16.6 15 2.32 15h11.36c1.72 0 2.93-1.84 2-3.4L9.98 2.11ZM7.71 3.15A.31.31 0 0 1 8 3c.13 0 .23.06.28.15l5.68 9.47c.05.08.05.16 0 .23a.31.31 0 0 1-.28.15H2.32a.31.31 0 0 1-.28-.15.21.21 0 0 1 0-.23l5.68-9.47Z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
               
            </span>
          </div>
          <div
            className="c9"
          >
            <span
              className="Typography__Span-sc-10mju41-0 c2"
            >
              Leverage products without stop loss
            </span>
            <span
              className="Typography__Span-sc-10mju41-0 c10"
            >
              Valid until 2023-12-31
            </span>
          </div>
        </div>
        <div
          className="c11"
        >
          <svg
            aria-hidden="true"
            className="c12"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M16 13.42l-8-8-8 8v-2.828l8-8 8 8v2.828z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>
  <div
    aria-expanded={false}
    className="c1"
  >
    <h3
      className="Typography__Span-sc-10mju41-0 c2"
    >
      <button
        className="c3 c4"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <span
              className="c7"
            >
              <svg
                aria-hidden="true"
                className="c8"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                width={16}
              >
                <path
                  d="M9 9.75H7V6h2v3.75ZM9 10.5v1.75H7V10.5h2Z"
                  fill="currentColor"
                />
                <path
                  clipRule="evenodd"
                  d="M10 2.12a2.34 2.34 0 0 0-4 0L.34 11.59C-.61 13.16.6 15 2.32 15h11.36c1.72 0 2.93-1.84 2-3.4L9.98 2.11ZM7.71 3.15A.31.31 0 0 1 8 3c.13 0 .23.06.28.15l5.68 9.47c.05.08.05.16 0 .23a.31.31 0 0 1-.28.15H2.32a.31.31 0 0 1-.28-.15.21.21 0 0 1 0-.23l5.68-9.47Z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
               
            </span>
          </div>
          <div
            className="c9"
          >
            <span
              className="Typography__Span-sc-10mju41-0 c2"
            >
              Leverage products without stop loss
            </span>
            <span
              className="Typography__Span-sc-10mju41-0 c10"
            >
              Valid until 2023-12-31
            </span>
          </div>
        </div>
        <div
          className="c11"
        >
          <svg
            aria-hidden="true"
            className="c12"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M16 13.42l-8-8-8 8v-2.828l8-8 8 8v2.828z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>
</div>
`;

exports[`Storyshots Molecules / Accordion With Footer 1`] = `
Array [
  .c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  color: #336BFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  outline: 1px none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c0.c0 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c2 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c7 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

.c7 svg {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c3 {
  -webkit-tap-highlight-color: transparent;
}

<div
    aria-expanded={false}
    className="c0"
  >
    <h3
      className="Typography__Span-sc-10mju41-0 c1"
    >
      <button
        className="c2 c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <span
              className="Typography__Span-sc-10mju41-0 c1"
            >
              Låg CO₂ risk
            </span>
            <span
              className="Typography__Span-sc-10mju41-0 c6"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <svg
            aria-hidden="true"
            className="c8"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M7 9v7h2V9h7V7H9V0H7v7H0v2h7z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  color: #336BFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c0 {
  outline: 1px none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c0.c0 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c2 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c7 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

.c7 svg {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c3 {
  -webkit-tap-highlight-color: transparent;
}

<div
    aria-expanded={false}
    className="c0"
  >
    <h3
      className="Typography__Span-sc-10mju41-0 c1"
    >
      <button
        className="c2 c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <span
              className="Typography__Span-sc-10mju41-0 c1"
            >
              Sustainability score
            </span>
            <span
              className="Typography__Span-sc-10mju41-0 c6"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <svg
            aria-hidden="true"
            className="c8"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M7 9v7h2V9h7V7H9V0H7v7H0v2h7z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c0 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

<div
    className="c0"
  />,
  .c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  padding-top: 12px;
}

<div
    className="c0"
  >
    <p
      className="Typography__Span-sc-10mju41-0 c1"
    >
      Did not find what you look for? ...That's a shame. 
    </p>
  </div>,
]
`;
